--- a/BSK_Encryption/BSK_Encryption.csproj
+++ b/BSK_Encryption/BSK_Encryption.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Validators\TextValidator.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -66,6 +67,8 @@
     <Compile Include="Converters\BlockConverter.cs" />
     <Compile Include="Converters\CipherConverter.cs" />
     <Compile Include="DataViewModel.cs" />
+    <Compile Include="Validators\OutputPathValidator.cs" />
+    <Compile Include="Validators\InputPathValidator.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
