--- a/BSK_Encryption/BSK_Encryption.csproj
+++ b/BSK_Encryption/BSK_Encryption.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Encryption\AesEncrytpionApi.cs" />
     <Compile Include="Validators\TextValidator.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
