Added user Register generate key (half-functional) Added RsaEncryptionApi.cs

--- a/Proj1/BSK_Encryption/BSK_Encryption.csproj
+++ b/Proj1/BSK_Encryption/BSK_Encryption.csproj
@@ -57,6 +57,8 @@
     </ApplicationDefinition>
     <Compile Include="Const.cs" />
     <Compile Include="Encryption\Conversion.cs" />
+    <Compile Include="Encryption\RsaEncryptionApi.cs" />
+    <Compile Include="ViewModels\NotifyPropertyChanged.cs" />
     <Compile Include="ViewModels\UserGridElement.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
     <Compile Include="Windows\DecrypteWindow.xaml.cs">
