--- a/Proj2/Database/Database.csproj
+++ b/Proj2/Database/Database.csproj
@@ -52,18 +52,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataBaseModel.cs" />
-    <Compile Include="DisplayData\Klient.cs" />
-    <Compile Include="DBKlient.cs" />
-    <Compile Include="Konto.cs" />
-    <Compile Include="Pracownik.cs" />
-    <Compile Include="Produkt.cs" />
+    <Compile Include="DataBaseData\DBKlient.cs" />
+    <Compile Include="DataBaseData\DBKonto.cs" />
+    <Compile Include="DataBaseData\DBPracownik.cs" />
+    <Compile Include="DataBaseData\DBProdukt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Zamowienia.cs" />
-    <Compile Include="zam_prod.cs" />
+    <Compile Include="DataBaseData\DBZamowienia.cs" />
+    <Compile Include="DataBaseData\DBzam_prod.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataBaseWcfData\DataTemplates.csproj">
+      <Project>{D03C4F8B-5F8A-4ABD-842A-7B7FC39942D9}</Project>
+      <Name>DataTemplates</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
