--- a/Proj2/Proj2/App.config
+++ b/Proj2/Proj2/App.config
@@ -1,6 +1,36 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <wsDualHttpBinding>
+        <binding name="WSDualHttpBinding_IAccessService" />
+      </wsDualHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:60789/AccesService.svc" binding="wsDualHttpBinding"
+        bindingConfiguration="WSDualHttpBinding_IAccessService" contract="ServiceReference1.IAccessService"
+        name="WSDualHttpBinding_IAccessService">
+        <identity>
+          <userPrincipalName value="DESKTOP-TN1PSML\Kamil" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
