--- a/Proj2/Test/App.config
+++ b/Proj2/Test/App.config
@@ -20,4 +20,20 @@
   <connectionStrings>
     <add name="DataBaseModel" connectionString="data source=DESKTOP-EJE4LDF;initial catalog=Sklep;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <system.serviceModel>
+    <bindings>
+      <wsDualHttpBinding>
+        <binding name="WSDualHttpBinding_IAccessService" />
+      </wsDualHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:60789/AccesService.svc" binding="wsDualHttpBinding"
+        bindingConfiguration="WSDualHttpBinding_IAccessService" contract="ServiceReference1.IAccessService"
+        name="WSDualHttpBinding_IAccessService">
+        <identity>
+          <userPrincipalName value="DESKTOP-TN1PSML\Kamil" />
+        </identity>
+      </endpoint>
+    </client>
+  </system.serviceModel>
 </configuration>
