--- a/Proj2/WCFDataBaseMacService/Web.config
+++ b/Proj2/WCFDataBaseMacService/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -12,6 +12,11 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.serviceModel>
+    <bindings>
+      <wsDualHttpBinding>
+        <binding name="NewBinding0" clientBaseAddress="http://locahost:8010/Tempuri" />
+      </wsDualHttpBinding>
+    </bindings>
     <behaviors>
       <serviceBehaviors>
         <behavior>
@@ -23,7 +28,10 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-      <add binding="basicHttpsBinding" scheme="https" />
+      <remove scheme="http" />
+      <add scheme="http" binding="wsDualHttpBinding" bindingConfiguration="NewBinding0" />
+      <add scheme="https" binding="basicHttpsBinding" />
+      <add scheme="wsd" binding="wsDualHttpBinding" />
     </protocolMapping>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
@@ -46,6 +54,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DataBaseModel" connectionString="data source=DESKTOP-EJE4LDF;initial catalog=Sklep;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DataBaseModel" connectionString="Server=DESKTOP-TN1PSML\SQLKAMIL;Database=Sklep;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
